# graphix-ibmq

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  noxfile.py  pyproject.toml  readme.md  requirements-dev.txt  requirements.txt  setup.py  tox.ini
.github/: pull_request_template.md
.github/workflows/: ci.yml  lint.yml
docs/: requirements.txt
docs/source/: conf.py  converter.rst  index.rst  reference.rst  runner.rst  tutorial.rst
examples/: aer_sim.py  ibm_device.py  real_device.py
examples/gallery/: aer_sim.py  qiskit_to_graphix.py  readme.rst
graphix-ibmq/: runner.py
graphix_ibmq/: __init__.py  backend.py  clifford.py  compile_options.py  compiler.py  converter.py  executor.py  job.py  job_handle.py  job_handler.py  result_utils.py  runner.py  version.py
tests/: random_circuit.py  test_backend.py  test_compile_options.py  test_compiler.py  test_converter.py  test_ibmq_backend_temp.py  test_ibmq_interface.py  test_job.py  test_job_integration.py  test_result_utils.py  test_simulation.py
