[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "graphix_ibmq"
description = "IBMQ interface for graphix library, the MBQC compiler "
authors = [
  { name = "Daichi Sasaki" },
  { name = "Shinichi Sunami", email = "shinichi.sunami@gmail.com" },
]
maintainers = [
  { name = "Daichi Sasaki" },
  { name = "Shinichi Sunami", email = "shinichi.sunami@gmail.com" },
]
requires-python = ">=3.8,<3.12"
readme = "README.md"
license-files = ["LICENSE"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Topic :: Scientific/Engineering :: Physics",
]
dynamic = ["version", "dependencies", "optional-dependencies"]

[project.urls]
Documentation = "https://graphix.readthedocs.io"
"Bug Tracker" = "https://github.com/TeamGraphix/graphix-ibmq/issues"

[tool.setuptools.dynamic]
version = { attr = "graphix_ibmq.version.__version__" }
dependencies = { file = ["requirements.txt"] }

[tool.setuptools.dynamic.optional-dependencies]
dev = { file = ["requirements-dev.txt"] }

[tool.mypy]
files = ["*.py", "graphix_ibmq/**/*.py", "examples/**/*.py", "tests/**/*.py"]
strict = true
ignore_missing_imports = true
